--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "4.0.3",
     "recharts": "^2.1.6",
     "semantic-ui-css": "^2.4.1",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
